--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
     </main>
     <footer>
         <h3>Brief</h3>
-        <p>I have over <span id="years"><b>10 years</b></span> experience in web development and have coded several projects please feel free to contact me!</p>
+        <p>I have over <span id="years"><b>10 years</b></span> experience in and have coded several projects please feel free to contact me!</p>
+        <ul>
+            <l1><a href="#">emmanuel@work.com</a></l1>
+        </ul>
     </footer>
 </body>
 </html>
